# spring-initialzr-in-rust

./: Cargo.toml  README.md
src/: main.rs
