[package]
name = "spring-initializer-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spring-start"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
clap = "4.0"
serde = { version = "1.0", features = ["derive"] }
colored = "2.0"
tokio = { version = "1", features = ["full"] }
zip = "0.6"
dirs = "4.0"
